# qmof_thermo

./: .gitignore  MANIFEST.in  README.md  _setup.py  pyproject.toml  sample_usage.py  setup.py  test.ipynb  test.py
.github/: dependabot.yml
.github/workflows/: tests.yaml
figures/: figure_1.py  figure_2.py  figure_3.py  figure_4.py  figure_5.py  figure_6a.py  figure_6bc.py  figure_7.py  figure_8.py  figure_s10.py  figure_s11.py  figure_s12.py  figure_s13.py  figure_s14.py  figure_s15.py  figure_s16.py  figure_s16a.py  figure_s16b.py  figure_s17.py  figure_s18.py  figure_s19.py  figure_s20.py  figure_s21.py  figure_s22.py  figure_s23a.py  figure_s23b.py  figure_s24.py  figure_s25a.py  figure_s25b.py  figure_s28.py  figure_s4a.py  figure_s4b.py  figure_s4c.py  figure_s5a.py  figure_s5b.py  figure_s6a.py  figure_s6b.py  figure_s6c.py  figure_s6d.py  figure_s7ab.py  (+4 more)
src/qmof_hull.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/qmof_thermo/: __init__.py  hull.py  patched_phase_diagram.json  phase_diagram.py  relax.py
src/qmof_thermo/core/: calc.py  phase_diagram.py  relax.py  setup_pd.py
tests/: qmof-bda2f7d.cif  qmof-bda2f7d_relaxed.cif  requirements.txt  test_e_hull.py
tests/test_data/: test_reference_thermo.json  test_reference_thermo_structures.json
tests/test_data/test_phase_diagrams/: ('C', 'H', 'N', 'O', 'Zn')_phase_diagram.json  chemical_space_to_mpids.json
tests/test_phase_diagrams/: ('C', 'H', 'N', 'O', 'Zn')_phase_diagram.json  chemical_space_to_mpids.json
